interface-segregation-principle/bad/src/main/java/example/Main.java
package example;

public class Main {

    public static void main(String[] args) {
        Worker robot = new RobotWorker();
        robot.work();
        robot.eat();   // Runtime crash
    }
}